tests/macros/tests/ui/err/has-async-root-and-enter-on-poll.stderr
error: `async_root` can not be used with `enter_on_poll`
 --> tests/ui/err/has-async-root-and-enter-on-poll.rs:3:1
  |
3 | #[trace(async_root, enter_on_poll = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
