tests/macros/tests/ui/err/has-async-root-and-enter-on-poll.rs
use fastrace::trace;

#[trace(async_root, enter_on_poll = true)]
async fn f() {}

fn main() {}
